# sentinel-security-ai-dispatch

./: .gitignore  README.md  TODO.md
ai_dispatch/: .gitignore  .graph_delta_state.json  README.md  TODO.md  pyproject.toml
ai_dispatch/src/commands/: handler.py  list_recent.py  parse.py  parse_queue.py  watch.py  watch_parse.py
docs/: microsoft-app-only-auth.md
email_parsing_experiment/: parser.py
email_parsing_experiment/providers/: __init__.py
email_parsing_test/: README.md  main.py  providers.py  pyproject.toml  setup.py
email_parsing_test/schemas/: client_request.py  employee_cover.py
email_parsing_test/shift_parser/: __init__.py  __main__.py  parser.py  prompts.py  schema.py
email_parsing_test/shift_parser/providers/: __init__.py  base.py  deepseek_provider.py  ollama_provider.py  openai_provider.py
src/commands/: parse_queue.py
