[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai_dispatch"
version = "0.1.0"
description = "Outlook email ingestion and AI shift-scheduling parser"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mail",
    "parsing",
    "worker-queue",
]

[project.scripts]
dispatch-watch = "commands.watch:main"
dispatch-list  = "commands.list_recent:main"
dispatch-parse = "commands.parse:main"
dispatch-watch-parse = "commands.watch_parse:main"
dispatch-parse-queue = "commands.parse_queue:main"

[dependency-groups]
dev-dependencies = ["ruff", "mypy"]

[tool.hatch.build.targets.wheel]
packages = ["src/commands"]

[tool.uv.workspace]
members = [
    "packages/mail",
    "packages/parsing",
    "packages/worker_queue",
]

[tool.uv.sources]
mail    = { workspace = true }
parsing = { workspace = true }
worker-queue = { workspace = true }
